src/style.css
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  overflow: hidden;
  background: #fff;
}

#game {
  display: block;
  position: absolute;
  top: 10vh;
  left: 5vw;
  width: 90vw;
  height: 70vh;
}

